--- a/web_dynamic/templates/100-hbnb.html
+++ b/web_dynamic/templates/100-hbnb.html
@@ -2,60 +2,94 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <!-- Include jQuery library for DOM manipulation and event handling -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- Link to the custom script for HBnB project with cache-busting enabled -->
     <script src="../static/scripts/100-hbnb.js?{{ cache_id }}"></script>
+    <!-- Link to CSS stylesheets for various components of the page -->
     <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css?{{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css?{{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css?{{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?{{ cache_id }}">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}">
+    <!-- Set favicon for the page -->
     <link rel="icon" href="../static/images/icon.png?{{ cache_id }}" />
+    <!-- Webpage Title -->
     <title>HBnB</title>
   </head>
   <body>
+    <!-- Header containsa the logo and API status indicator -->
     <header>
       <div class="logo"></div>
-	  <div id="api_status" class="available"></div>
+      <!-- The API status is indicated by class availability -->
+      <div id="api_status" class="available"></div>
     </header>
+
+    <!-- Main  -->
     <div class="container">
+      <!-- filters to select locations and amenities -->
       <section class="filters">
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>&nbsp;</h4>
-	  <div class="popover">
-	    <ul>
-	      {% for state in states %}
-	      <li>
-		  <h2><input class="state-checkbox" type="checkbox" data-id="{{ state[0].id }}" data-name="{{ state[0].name }}">{{ state[0].name }}:</h2>
-		<ul>
-		  {% for city in state[1] %}
-		  <li><input class="city-checkbox" type="checkbox" data-id="{{ city.id }}" data-name="{{ city.name }}">{{ city.name }}</li>
-		  {% endfor %}
-		</ul>
-	      </li>
-	      {% endfor %}
-	    </ul>
-	  </div>
-	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>&nbsp;</h4>
-	  <div class="popover">
-	    <ul>
-	      {% for amenity in amenities %}
-	      <li><input class="amen-checkbox" type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">{{ amenity.name }}</li>
-	      {% endfor %}
-	    </ul>
-	  </div>
-	</div>
-	<button type="button">Search</button>
+        <!-- select states and respective cities -->
+        <div class="locations">
+          <h3>States</h3>
+          <h4>&nbsp;</h4> <!-- Spacer for visual alignment -->
+          <div class="popover">
+            <ul>
+              <!-- Looping through every state and displaying a checkbox with state's name -->
+              {% for state in states %}
+              <li>
+                <h2>
+                  <!-- Checkbox to select entire state -->
+                  <input class="state-checkbox" type="checkbox" data-id="{{ state[0].id }}" data-name="{{ state[0].name }}">
+                  {{ state[0].name }}:
+                </h2>
+                <ul>
+                  <!-- Looping through every city within selected state -->
+                  {% for city in state[1] %}
+                  <li>
+                    <!-- Checkbox to select individual cities -->
+                    <input class="city-checkbox" type="checkbox" data-id="{{ city.id }}" data-name="{{ city.name }}">
+                    {{ city.name }}
+                  </li>
+                  {% endfor %}
+                </ul>
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+
+        <!-- select amenities using checkboxes -->
+        <div class="amenities">
+          <h3>Amenities</h3>
+          <h4>&nbsp;</h4> <!-- Spacer for visual alignment -->
+          <div class="popover">
+            <ul>
+              <!-- Looping through every amenity and displaying the checkbox -->
+              {% for amenity in amenities %}
+              <li>
+                <!-- Checkbox to select individual amenity -->
+                <input class="amen-checkbox" type="checkbox" data-id="{{ amenity.id }}" data-name="{{ amenity.name }}">
+                {{ amenity.name }}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+        <!-- Triggers the search -->
+        <button type="button">Search</button>
       </section>
+
+      <!-- Displays list of places -->
       <div class="placesh1"><h1>Places</h1></div>
       <section class="places">
+        <!-- Placeholder dynamically loaded content -->
       </section>
     </div>
+
+    <!-- Footer  -->
     <footer>
-      <p>Holberton School</p>
+      <p>HBNB</p>
     </footer>
   </body>
 </html>
